--- a/index.html
+++ b/index.html
@@ -3,66 +3,77 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link type="text/css" rel="stylesheet" href="css/styles.css">
-        <title>Acadia Park Equipment Co.</title>
-        <style type="text/css">
-            div { padding:10px;
-                width:250px;
-                height: 350px;
-                text-align: left;
-            }
-        </style>
-    <script language="javascript">
-      
+    <link type="text/css" rel="stylesheet" src="css/styles.css">
+    <script type="text/javascript" src="js/script.js"> </script>
+    <script type="text/javascript" src="js/jquery-3.7.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+    <link href="js/jquery-ui.theme.min.css" rel="stylesheet">
+    <script type="text/javascript" src="/js/jqUi/external/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/js/jqUi/jquery-ui.js"></script>
+    <title>Acadia Park Equipment Co.</title>
     </script>
-        <head>
-            <title>Arcadia </title>
-            <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <script src="js/script.js"></script>
-            <script src="/Acadia/css/stylesheet.css">
-            </script>
-            <script src="/Users/haydancrawford/Documents/Documents - Haydan’s iMac/Acadia/root/css/stylesheet.css"></script>
-            <style>
-              body {font-family: 'Cambria', sans-serif;
-                  background-repeat: no-repeat;
-                  background-position: center;
-                  background-size: 600px;
-                  font-family:"Cambria";
-                  background-position: top center;
-                  background-repeat:no-repeat;
-                  background-attachment: fixed;
-                  background-color: #E5E7E6;
-                }
-              
+    <style>
+      body {font-family: 'Cambria', sans-serif;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: 600px;
+          font-family:"Cambria";
+          background-position: top center;
+          background-repeat:no-repeat;
+          background-attachment: fixed;
+          background-color: #E5E7E6;
+         }
+     </style>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar">
+         <a href="#" class="nav-branding">ACADIA PARK EQUIPMENT CO.</a>
+         <ul class="nav-menu">
+           <li class="nav-item">
+             <a href="#" class="nav-link">Home</a>
+           </li>
+           <li class="nav-item">
+             <a href="#" class="nav-link">About</a>
+           <li class="nav-item">
+             <a href="#" class="nav-link">Explore</a>
+           </li>
+           <li class="nav-item">
+             <a href="#" class="nav-link">Contact</a>
+           </li>
+           </li>
+           </ul>
+         <div class="hamburger">
+           <span class="bar"></span>
+           <span class="bar"></span> 
+           <span class="bar"></span>
+           </div>
+         </nav>
+      </header>
+        <div class="div-container">
+          <main>
+            <article class="one-third">
+              <img src="images/backpack.jpg" width="250" height="350">
+              <h2><a href="/shop.html" id="shop"><font color="#e9692c">Hiking</font></a></h2>
+              <p><i>A hiking we will go with the latest packs, coolers, boots, and so much more.
+                All the brands you love at a realistic and reasonable price.</i></p>
+            </article>
+            <article class="one-third">
+              <img src="images/kayaks.jpg" width="250" height="350">
+              <h2><a href="/shop.html" id="shop"><font color="#e9692c">Water</font></a></h2>
+              <p><i>A kayaking we will go with the most resistant and durable of water accessories.
+              The choices are endless from floating down the river to high intensitiy tubing.</i></p>
+            </article>
+            <article class="one-third">
+              <img src="images/tent.jpg" width="250" height="350">
+              <h2><a href="/shop.html" id="shop"><font color="#e9692c">Camping</font></a></h2>
+              <p><i>A camping we will go with all our tents and supplies. Whether you like glamping
+              or roughing it like the old days, we have you covered with tents and accessories.</i></p>
+            </article>
+          </main>
 
-            </style>
-
-          </head>
-          <body>
-            <div class="div-container">
-              <main>
-                <article class="one-third">
-                  <img src="images/backpack.jpg" width="250" height="350">
-                  <h2><a href="/shop.html" id="shop"><font color="#e9692c">Hiking</font></a></h2>
-                  <p><i>A hiking we will go with the latest packs, coolers, boots, and so much more.
-                    All the brands you love at a realistic and reasonable price.</i></p>
- 
-                </article>
-                <article class="one-third">
-                  <img src="images/kayaks.jpg" width="250" height="350">
-                  <h2><a href="/shop.html" id="shop"><font color="#e9692c">Water</font></a></h2>
-                  <p><i>A kayaking we will go with the most resistant and durable of water accessories.
-                  The choices are endless from floating down the river to high intensitiy tubing.</i></p>
-                </article>
-                <article class="one-third">
-                  <img src="images/tent.jpg" width="250" height="350">
-                  <h2><a href="/shop.html" id="shop"><font color="#e9692c">Camping</font></a></h2>
-                  <p><i>A camping we will go with all our tents and supplies. Whether you like glamping
-                  or roughing it like the old days, we have you covered with tents and accessories.</i></p>
-                </article>
-              </main>
-
-        </div>
+      </div>
     </body
 </html>
