--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <a href="/css/styles.css" class="nav-branding">ACADIA PARK EQUIPMENT CO.</a>
+      <a href="contact.html" class="nav-branding">ACADIA PARK EQUIPMENT CO.</a>
       <ul class="nav-menu">
         <li class="nav-item">
           <a href="index.html" class="nav-link">Home</a>
