--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
   <body>
     <header>
       <nav class="navbar">
-         <a href="#" class="nav-branding">ACADIA PARK EQUIPMENT CO.</a>
+         <a href="contact.html" class="nav-branding">ACADIA PARK EQUIPMENT CO.</a>
          <ul class="nav-menu">
            <li class="nav-item">
-             <a href="#" class="nav-link">Home</a>
+             <a href="index.html" class="nav-link">Home</a>
            </li>
            <li class="nav-item">
-             <a href="#" class="nav-link">About</a>
+             <a href="about.html" class="nav-link">About</a>
            <li class="nav-item">
-             <a href="#" class="nav-link">Explore</a>
+             <a href="shop.html" class="nav-link">Explore</a>
            </li>
            <li class="nav-item">
-             <a href="#" class="nav-link">Contact</a>
+             <a href="contact.html" class="nav-link">Contact</a>
            </li>
            </li>
            </ul>
