--- a/index.html
+++ b/index.html
@@ -1,79 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" src="css/styles.css">
-    <script type="text/javascript" src="js/script.js"> </script>
-    <script type="text/javascript" src="js/jquery-3.7.0.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui.js"></script>
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
-    <link href="js/jquery-ui.theme.min.css" rel="stylesheet">
-    <script type="text/javascript" src="/js/jqUi/external/jquery/jquery.js"></script>
-    <script type="text/javascript" src="/js/jqUi/jquery-ui.js"></script>
-    <title>Acadia Park Equipment Co.</title>
-    </script>
-    <style>
-      body {font-family: 'Cambria', sans-serif;
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: 600px;
-          font-family:"Cambria";
-          background-position: top center;
-          background-repeat:no-repeat;
-          background-attachment: fixed;
-          background-color: #E5E7E6;
-         }
-     </style>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar">
-         <a href="contact.html" class="nav-branding">ACADIA PARK EQUIPMENT CO.</a>
-         <ul class="nav-menu">
-           <li class="nav-item">
-             <a href="index.html" class="nav-link">Home</a>
-           </li>
-           <li class="nav-item">
-             <a href="about.html" class="nav-link">About</a>
-           <li class="nav-item">
-             <a href="shop.html" class="nav-link">Explore</a>
-           </li>
-           <li class="nav-item">
-             <a href="contact.html" class="nav-link">Contact</a>
-           </li>
-           </li>
-           </ul>
-         <div class="hamburger">
-           <span class="bar"></span>
-           <span class="bar"></span> 
-           <span class="bar"></span>
-           </div>
-         </nav>
-      </header>
-        <div class="div-container">
-          <main>
-            <article class="one-third">
-              <img src="images/backpack.jpg" width="250" height="350">
-              <h2><a href="/shop.html" id="shop"><font color="#e9692c">Hiking</font></a></h2>
-              <p><i>A hiking we will go with the latest packs, coolers, boots, and so much more.
-                All the brands you love at a realistic and reasonable price.</i></p>
-            </article>
-            <article class="one-third">
-              <img src="images/kayaks.jpg" width="250" height="350">
-              <h2><a href="/shop.html" id="shop"><font color="#e9692c">Water</font></a></h2>
-              <p><i>A kayaking we will go with the most resistant and durable of water accessories.
-              The choices are endless from floating down the river to high intensitiy tubing.</i></p>
-            </article>
-            <article class="one-third">
-              <img src="images/tent.jpg" width="250" height="350">
-              <h2><a href="/shop.html" id="shop"><font color="#e9692c">Camping</font></a></h2>
-              <p><i>A camping we will go with all our tents and supplies. Whether you like glamping
-              or roughing it like the old days, we have you covered with tents and accessories.</i></p>
-            </article>
-          </main>
-
+<head>
+  <title>Arcadia Park Equipment Co.</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script type="textjavascript"></script>
+  <script src="/Acadia/css/stylesheet.css">
+  </script>
+  <style>
+    body {font-family:Cambria;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 600px;
+        font-family:"Cambria";
+        background-position: top center;
+        background-repeat:no-repeat;
+        background-attachment: fixed;
+        background-color: #E5E7E6;
+      }
+    .jumbotron {background-image:url(images/grouphike.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size:cover;
+      font-family:"Cambria";
+    }
+    .container {font-family:"Cambria";
+    }
+    .navbar {font-family:"Cambria";
+      background-color:white;
+  
+  }
+    .navbar-toggle {background-color:#E9692C;}
+    .active {background-color: #E9692C;}
+    h2 {
+        text-align: center;
+    }
+    p{
+        text-align: justify;
+    }
+  </style>
+</head>
+<body>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span> 
+        </button>
+        <a class="navbar-brand" href="index.html"><img src="images/acadialogo-main copy.jpg" width="50"> </img></a>
       </div>
-    </body
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="/index.html">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/shop.html">Explore</a></li> 
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/contact.html"> Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+<div class="jumbotron text-center">
+  <h1 class="h1"><font color="#E5E7E6" size="50px">Arcadia Park Equipment Co.</font></h1>
+  <p><font color="#FFF000"><i>your adventure, your world.</i></font></p> 
+</div>
+  <br>
+  <br>    
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+        <img src="images/backpack.jpg" width="250" height="350">
+      <h2><a href="/shop.html" id="shop"><font color="#e9692c">Hiking</font></a></h2>
+      <p><i>A hiking we will go with the latest packs, coolers, boots, and so much more.</p>
+      <p>All the brands you love at a realistic and reasonible price.</p>
+    </div>
+    <div class="col-sm-4">
+        <img src="images/kayaks.jpg" width="250" height="350">
+      <h2><a href="/shop.html" id="shop"><font color="#e9692c">Water</font></a></h2>
+      <p>A kayaking we will go with the most resistant and durable of water accessories.</p>
+      <p>The choices are endless from floating down the river to high intensitiy tubing.</p>
+    </div>
+    <div class="col-sm-4">
+        <img src="images/tent.jpg" width="250" height="350">
+    <h2><a href="/shop.html" id="shop"><font color="#e9692c">Camping</font></a></h2>
+      <p>A camping we will go with all our tents and supplies.</p>
+      <p>Whether you like glamping for roughing it like the old days, we have you covered with tents and accessories.</i> </p>
+    </div>
+  </div>
+</div>
+
+</body>
+
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
