--- a/shop.html
+++ b/shop.html
@@ -3,8 +3,72 @@
     <head>
         <meta charset="utf-8">
         <title>Acadia Park Equipment Co.</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script type="textjavascript"></script>
+        <script src="/Acadia/css/stylesheet.css">
+        </script>
+        <style>
+          body {font-family:Cambria;
+              background-repeat: no-repeat;
+              background-position: center;
+              background-size: 600px;
+              font-family:"Cambria";
+              background-position: top center;
+              background-repeat:no-repeat;
+              background-attachment: fixed;
+              background-color: #E5E7E6;
+            }
+          .jumbotron {background-image:url(images/grouphike.jpg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size:cover;
+            font-family:"Cambria";
+          }
+          .container {font-family:"Cambria";
+          }
+          .navbar {font-family:"Cambria";
+            background-color:white;
+        
+        }
+          .navbar-toggle {background-color:#E9692C;}
+          .active {background-color: #E9692C;}
+          h2 {
+              text-align: center;
+          }
+          p{
+              text-align: justify;
+          }
+        </style>
     </head>
-    <body bgcolor="#E5E7E6">
+    <body>
+        <header>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span> 
+                </button>
+                <a class="navbar-brand" href="index.html"><img src="images/acadialogo-main copy.jpg" width="50"> </img></a>
+              </div>
+              <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                  <li class="active"><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="shop.html">Explore</a></li> 
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                  <li><a href="contact.html"> Contact</a></li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          </header>
     <table border="5" bordercolor="red" cellpadding="7" cellspacing="0">
         <tr align="center">
             <td> this is cell 1</td>
