--- a/about.html
+++ b/about.html
@@ -71,12 +71,12 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="index2.html">Home</a></li>
-          <li><a href="about2.html">About</a></li>
-          <li><a href="shop.html">Shop</a></li> 
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="shop.html">Explore</a></li> 
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="contact.html"> Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
