--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <script src="/Acadia/css/stylesheet.css">
   </script>
   <style>
-    body {font-family:Cambria;
+    body {
         background-repeat: no-repeat;
         background-position: center;
         background-size: 600px;
-        font-family:"Cambria";
+        font-family:"Cambria", sans-serif;
         background-position: top center;
         background-repeat:no-repeat;
         background-attachment: fixed;
@@ -26,6 +26,7 @@
       background-position: center;
       background-size:cover;
       font-family:"Cambria";
+      text-align: center;
     }
     .container {font-family:"Cambria";
     }
@@ -38,8 +39,13 @@
     h2 {
         text-align: center;
     }
-    p{
+    .products{
         text-align: justify;
+        font-size: 18px;
+        font-family:"Cambria", sans-serif;
+    }
+    .productimg{
+      text-align: center;
     }
   </style>
 </head>
@@ -67,7 +73,7 @@
     </div>
   </nav>
 <div class="jumbotron text-center">
-  <h1 class="h1"><font color="#E5E7E6" size="50px">Arcadia Park Equipment Co.</font></h1>
+  <h1 class="h1"><font color="#E5E7E6" font-family="Cambria" font-size="50px">Arcadia Park Equipment Co.</font></h1>
   <p><font color="#FFF000"><i>your adventure, your world.</i></font></p> 
 </div>
   <br>
@@ -75,22 +81,22 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-        <img src="images/backpack.jpg" width="250" height="350">
+        <img class="productimg" src="images/backpack.jpg" width="350" height="475">
       <h2><a href="/shop.html" id="shop"><font color="#e9692c">Hiking</font></a></h2>
-      <p><i>A hiking we will go with the latest packs, coolers, boots, and so much more.</p>
-      <p>All the brands you love at a realistic and reasonible price.</p>
+      <p class="products"><i>A hiking we will go with the latest packs, coolers, boots, and so much more.</p>
+      <p class="products">All the brands you love at a realistic and reasonible price.</p>
     </div>
     <div class="col-sm-4">
-        <img src="images/kayaks.jpg" width="250" height="350">
+        <img class="productimg" src="images/kayaks.jpg" width="350" height="475">
       <h2><a href="/shop.html" id="shop"><font color="#e9692c">Water</font></a></h2>
-      <p>A kayaking we will go with the most resistant and durable of water accessories.</p>
-      <p>The choices are endless from floating down the river to high intensitiy tubing.</p>
+      <p class="products">A kayaking we will go with the most resistant and durable of water accessories.</p>
+      <p class="products">The choices are endless from floating down the river to high intensitiy tubing.</p>
     </div>
     <div class="col-sm-4">
-        <img src="images/tent.jpg" width="250" height="350">
+        <img class="productimg" src="images/tent.jpg" width="350" height="475">
     <h2><a href="/shop.html" id="shop"><font color="#e9692c">Camping</font></a></h2>
-      <p>A camping we will go with all our tents and supplies.</p>
-      <p>Whether you like glamping for roughing it like the old days, we have you covered with tents and accessories.</i> </p>
+      <p class="products">A camping we will go with all our tents and supplies.</p>
+      <p class="products">Whether you like glamping for roughing it like the old days, we have you covered with tents and accessories.</i> </p>
     </div>
   </div>
 </div>
