--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/index.html">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/shop.html">Explore</a></li> 
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="shop.html">Explore</a></li> 
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/contact.html"> Contact</a></li>
+          <li><a href="contact.html"> Contact</a></li>
         </ul>
       </div>
     </div>
@@ -82,19 +82,19 @@
   <div class="row">
     <div class="col-sm-4">
         <img class="productimg" src="images/backpack.jpg" width="350" height="475">
-      <h2><a href="/shop.html" id="shop"><font color="#e9692c">Hiking</font></a></h2>
+      <h2><a href="shop.html" id="shop"><font color="#e9692c">Hiking</font></a></h2>
       <p class="products"><i>A hiking we will go with the latest packs, coolers, boots, and so much more.</p>
       <p class="products">All the brands you love at a realistic and reasonible price.</p>
     </div>
     <div class="col-sm-4">
         <img class="productimg" src="images/kayaks.jpg" width="350" height="475">
-      <h2><a href="/shop.html" id="shop"><font color="#e9692c">Water</font></a></h2>
+      <h2><a href="shop.html" id="shop"><font color="#e9692c">Water</font></a></h2>
       <p class="products">A kayaking we will go with the most resistant and durable of water accessories.</p>
       <p class="products">The choices are endless from floating down the river to high intensitiy tubing.</p>
     </div>
     <div class="col-sm-4">
         <img class="productimg" src="images/tent.jpg" width="350" height="475">
-    <h2><a href="/shop.html" id="shop"><font color="#e9692c">Camping</font></a></h2>
+    <h2><a href="shop.html" id="shop"><font color="#e9692c">Camping</font></a></h2>
       <p class="products">A camping we will go with all our tents and supplies.</p>
       <p class="products">Whether you like glamping for roughing it like the old days, we have you covered with tents and accessories.</i> </p>
     </div>
