--- a/shop.html
+++ b/shop.html
@@ -86,5 +86,104 @@
            <td> this is cell 9</td>   
         </tr>
     </table>
+    <section class="hero">
+      <div class="container">
+        <!-- Breadcrumbs -->
+        <ol class="breadcrumb justify-content-center">
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active">Shop        </li>
+        </ol>
+                <!-- Hero Content-->
+                <div class="hero-content pb-5 text-center">
+                  <h1 class="hero-heading">Hiking Gear</h1>
+                  <div class="row">   
+                    <div class="col-xl-8 offset-xl-2"><p class="lead text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing e
+                      lit, sed do eiusmod tempor incididunt.</p></div>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <main>
+              <div class="container">
+                <div class="row">
+                  <!-- Grid -->
+                  <div class="products-grid col-12 sidebar-none">
+                    <header class="product-grid-header">
+                      <div class="me-3 mb-3">
+                         Showing <strong>1-12 </strong>of <strong>158 </strong>products</div>
+                      <div class="me-3 mb-3"><span class="me-2">Show</span><a class="product-grid-header-show active" href="#">12    </a>
+                        <a class="product-grid-header-show " href="#">24    </a><a class="product-grid-header-show " href="#">All    </a>
+                      </div>
+                      <div class="mb-3 d-flex align-items-center"><span class="d-inline-block me-2">Sort by</span>
+                        <select class="form-select w-auto border-0">
+                          <option value="orderby_0">Default</option>
+                          <option value="orderby_1">Popularity</option>
+                          <option value="orderby_2">Rating</option>
+                          <option value="orderby_3">Newest first</option>
+                        </select>
+                      </div>
+                    </header>
+                    <div class="row">
+                      <!-- product-->
+                      <div class="col-xl-3 col-lg-4 col-sm-6">
+                        <div class="product">
+                          <div class="product-image">
+                            <div class="ribbon ribbon-info">Fresh</div><img class="img-fluid" src="images/blue-orange.jpg" alt="product" width="300"/>
+                            <div class="product-hover-overlay"><a class="product-hover-overlay-link" href="detail.html"></a>
+                              <div class="product-hover-overlay-buttons"><a class="btn btn-outline-dark btn-product-left d-none d-sm-inline-block" href="#"><i class="fa fa-shopping-cart"></i></a>
+                                <a class="btn btn-dark btn-buy" href="detail.html"><i class="fa-search fa"></i><span class="btn-buy-label ms-2">View</span></a>
+                                <a class="btn btn-outline-dark btn-product-right d-none d-sm-inline-block" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                  <i class="fa fa-expand-arrows-alt"></i></a>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="py-2">
+                            <p class="text-muted text-sm mb-1">Backpack</p>
+                            <h3 class="h6 text-uppercase mb-1"><a class="text-dark" href="detail.html">Everyday Traveler</a></h3>
+                            <span class="text-muted">$60.00</span>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- /product-->
+                                           <!-- product-->
+                     <div class="col-xl-3 col-lg-4 col-sm-6">
+                      <div class="product">
+                        <div class="product-image">
+                          <div class="ribbon ribbon-info">Fresh</div><img class="img-fluid" src="images/everytraveler.jpg" alt="product" width="300"/>
+                          <div class="product-hover-overlay"><a class="product-hover-overlay-link" href="detail.html"></a>
+                            <div class="product-hover-overlay-buttons"><a class="btn btn-outline-dark btn-product-left d-none d-sm-inline-block" href="#"><i class="fa fa-shopping-cart"></i></a>
+                              <a class="btn btn-dark btn-buy" href="detail.html"><i class="fa-search fa"></i><span class="btn-buy-label ms-2">View</span></a>
+                              <a class="btn btn-outline-dark btn-product-right d-none d-sm-inline-block" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                <i class="fa fa-expand-arrows-alt"></i></a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="py-2">
+                          <p class="text-muted text-sm mb-1">Backpack</p>
+                          <h3 class="h6 text-uppercase mb-1"><a class="text-dark" href="detail.html">Everyday Traveler</a></h3>
+                          <span class="text-muted">$60.00</span>
+                        </div>
+                      </div>
+                    </div>
+               <!-- product-->
+                     <div class="col-xl-3 col-lg-4 col-sm-6">
+                      <div class="product">
+                        <div class="product-image">
+                          <div class="ribbon ribbon-info">Fresh</div><img class="img-fluid" src="images/travelerbackpack.jpg" alt="product" width="300"/>
+                          <div class="product-hover-overlay"><a class="product-hover-overlay-link" href="detail.html"></a>
+                            <div class="product-hover-overlay-buttons"><a class="btn btn-outline-dark btn-product-left d-none d-sm-inline-block" href="#"><i class="fa fa-shopping-cart"></i></a>
+                              <a class="btn btn-dark btn-buy" href="detail.html"><i class="fa-search fa"></i><span class="btn-buy-label ms-2">View</span></a>
+                              <a class="btn btn-outline-dark btn-product-right d-none d-sm-inline-block" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                <i class="fa fa-expand-arrows-alt"></i></a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="py-2">
+                          <p class="text-muted text-sm mb-1">Backpack</p>
+                          <h3 class="h6 text-uppercase mb-1"><a class="text-dark" href="detail.html">Everyday Traveler</a></h3>
+                          <span class="text-muted">$60.00</span>
+                        </div>
+                      </div>
+                    </div>
     </body>
 </html>
