--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="/resources/demos/style.css">
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
   <style>
   body {font-family: 'Cambria', sans-serif;
       background-repeat: no-repeat;
@@ -59,29 +61,25 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span> 
-        </button>
-        <a class="navbar-brand" href="index.html"><img src="images/acadialogo-main copy.jpg" width="50"> </img></a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="shop.html">Explore</a></li> 
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
+  <div class="container">
+    <div class="navbar">
+        <div class="logo">
+            <img src="images/acadialogo-main copy.jpg" width="125px" alt="logo">
+        </div>
+        <nav>
+            <ul id="MenuItems">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="product.html">Products</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="account.html">Account</a></li>
+            </ul>
+        </nav>
+        <a href="cart.html"><img src="images/cart-shopping-solid.png" alt="cart" width="30px" height="30px"></a>
+        <img src="images/hamburger.png" class="menu-icon" onclick="menutoggle()">
     </div>
-  </nav>
-  <img src="images/About us.jpg" width="600" class="text-center">
+  </div>  
+  <img src="images/About us.jpg" id="about">
   <div id="accordion">
     <h3 >About Us</h3>
     <div>
@@ -117,12 +115,81 @@
       </ul>
     </div>
     </div>
-</body>
-<footer>
-  <div class="footer-bottom">
-    <p>&copy; 2023 Acadia Park Equipment Co. All rights reserved.</p>
+    <!-----footer---->
+    <div class="footer">
+      <div class="container">
+          <div class="row">
+              <div class="footer-col-1">
+                  <h3>Download Our App</h3>
+                  <p>Download App for Android and iOS mobile phone.</p>
+                  <div class="app-logo">
+                      <img src="images/apps.png">
+                  </div>
+              </div>
+              <div class="footer-col-2">
+                  <img src="images/acadialogo-main copy.jpg">
+                  <p>Our purpose</p>
+              </div>
+              <div class="footer-col-3">
+                  <h3>Useful Links</h3>
+                  <ul>
+                  <li>Return Policy</li>
+                  <li>Mission Statement</li>
+                  <li src="contact.html">Contact Us</li>
+                  </ul>
+              </div>
+              <div class="footer-col-4">
+              <ul>
+                  <h3>Follow Us</h3>
+                  <li>Facebook</li>
+                  <li>Twitter</li>
+                  <li>Instagram</li>
+              </ul>
+              </div>
+          </div>
+          <hr>
+          <p class="copyright">Copyright 2023</p>
+      </div>
   </div>
-</footer>  
+
+
+<script>
+  var MenuItems = document.getElementById("MenuItems");
+  MenuItems.style.maxHeight = "0px";
+  function menutoggle(){
+      if (MenuItems.style.maxHeight == "0px")
+      {
+          MenuItems.style.maxHeight = "200px";
+      }
+      else
+      {
+          MenuItems.style.maxHeight = "0px";
+      }
+  }
+</script>
+<script>
+  var LoginForm = document.getElementById("LoginForm");
+  var RegisterForm = document.getElementById("RegisterForm");
+  var Indicator = document.getElementById("Indicator");
+
+  function register(){
+      RegisterForm.style.transform = "translateX(0px)";
+      LoginForm.style.transform = "translateX(0px)";
+  }
+  function login(){
+      RegisterForm.style.tran
+  }
+
+</script>
+
+
+
+</body>
+
+
+
+
+
 
 </html>
 
