changes to links

--- a/cart.html
+++ b/cart.html
@@ -13,18 +13,18 @@
       <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="images/acadialogo-main copy.jpg" width="125px" alt="logo">
+                <a href="index.html"><img src="images/acadialogo-main copy.jpg" width="125px" alt="logo"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Account</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="product.html">Products</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <img src="images/cart-shopping-solid.png" alt="cart" width="30px" height="30px">
+            <a href="cart.html"><img src="images/cart-shopping-solid.png" alt="cart" width="30px" height="30px"></a>
             <img src="images/hamburger.png" class="menu-icon" onclick="menutoggle()">
         </div>
       </div>  
@@ -103,7 +103,7 @@
                         <ul>
                         <li>Return Policy</li>
                         <li>Mission Statement</li>
-                        <li>Contact Us</li>
+                        <li href="contact.html">Contact Us</li>
                         </ul>
                     </div>
                     <div class="footer-col-4">
