--- a/product-details.html
+++ b/product-details.html
@@ -13,18 +13,18 @@
       <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="images/acadialogo-main copy.jpg" width="125px" alt="logo">
+                <a href="index.html"><img src="images/acadialogo-main copy.jpg" width="125px" alt="logo"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Account</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="product.html">Products</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="account.html">Account</a></li>
                 </ul>
             </nav>
-            <img src="images/cart-shopping-solid.png" alt="cart" width="30px" height="30px">
+            <a href="cart.html"><img src="images/cart-shopping-solid.png" alt="cart" width="30px" height="30px"></a>
             <img src="images/hamburger.png" class="menu-icon" onclick="menutoggle()">
         </div>
       </div>  
@@ -39,7 +39,7 @@
                     <h1> Stainless Steal Coffee Maker by YourChoice</h1>
                     <h4>$30.00</h4>
                     <input type="number" value="1">
-                    <a href="" class="btn">Add to Cart</a>
+                    <a href="cart.html" class="btn">Add to Cart</a>
                     <h3>Product Details</h3><br>
                     <p>Nothing beats a cup of freshing brewed coffee in the morning. 
                         But imagine that morning being on a beach or up in the Rocky 
@@ -59,48 +59,21 @@
                 <div class="col-4">
                     <img src="images/cooker.png">
                     <h4>Coffee Maker</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-half-o"></i>
-                    </div>
                     <p>$30.00</p>
                 </div>
                 <div class="col-4">
                     <img src="images/blue-orange.png">
                     <h4>Everyday Traveler Backpack</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-o"></i>
-                    </div>
                     <p>$60.00</p>
                 </div>
                 <div class="col-4">
                     <img src="images/travelerbackpack.png">
                     <h4>Extreme Traveler Backpack</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
                     <p>$75.00</p>
                 </div>
                 <div class="col-4">
                     <img src="images/tents.png">
                     <h4>Elite Camping Tent</h4>
-                    <div class="rating">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-half-o"></i>
-                    </div>
                     <p>$140.00</p>
                 </div>
                 </div>
